--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>i-am-a-slideshow</title>
-    <link rel="stylesheet" type="text/css" href="/public/css/style.css" />
-    <script src="/app.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <script src="./js/app.js" type="text/javascript" defer></script>
   </head>
   <body>
-    <section id="health-levels">
+    <section id="Title">
       <h2>I am a slideshow</h2>
     </section>
       <button id="add-photo-btn">Add photo</button>
